# rocket-project

./: .env  Cargo.toml  README.md
migrations/2021-10-22-091011_rocket-project/: down.sql  up.sql
src/: main.rs  models.rs
