[package]
authors = ["faraazbaig <fazzy0908@yandex.com>"]
edition = "2018"
name = "rocket-project"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.5", features = ["postgres"]}
dotenv = "0.15.0"
rocket = "0.4.5"
rocket-multipart-form-data = "0.9.5"
rocket_codegen = "0.4.5"
serde = {version = "1.0", features = ["derive"]}

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.4.5"
